--- a/.config/uwsgi.ini
+++ b/.config/uwsgi.ini
@@ -3,16 +3,18 @@
 [uwsgi]
 chdir = /srv/ec2-deploy/app
 module = config.wsgi
-home = /home/ubuntu/.pyenv/versions/ec2-deploy
+home = /home/ubuntu/.pyenv/versions/fc-ec2-deploy
+;http = :8000
 
 socket = /tmp/app.sock
-
-;chmod-socket = 666
-;chown-socket = deploy:deploy
+uid = ubuntu
+gid = ubuntu
+chmod-socket = 666
+chown-socket = ubuntu:ubuntu
 
 ;enable-threads = true
 master = true
 vacuum = true
-;pidfile = /tmp/mysite.pid
-;logto = /var/log/uwsgi/mysite/@(exec://date +%%Y-%%m-%%d).log
-;log-reopen = true
+pidfile = /tmp/mysite.pid
+logto = /tmp/uwsgi.log
+log-reopen = true
