--- a/.config/nginx-app.conf
+++ b/.config/nginx-app.conf
@@ -5,7 +5,15 @@ server {
     client_max_body_size 128M;
 
     location / {
-            uwsgi_pass      unix://tmp/app.sock;
-            include         uwsgi_params;
+        uwsgi_pass      unix://tmp/app.sock;
+        include         uwsgi_params;
+    }
+
+#    location /static/ {
+#        alias /srv/ec2-deploy
+#    }
+
+    location /media/ {
+        alias /srv/ec2-deploy/.media/;
     }
 }
