--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Custom
-.media
-.secrets/
+/.media
+/.static
+/.secrets/
 
 # Created by https://www.gitignore.io/api/git,linux,macos,django,python,pycharm+all
 
