--- a/.config/uwsgi.ini
+++ b/.config/uwsgi.ini
@@ -2,7 +2,7 @@
 
 [uwsgi]
 chdir = /srv/ec2-deploy/app
-module = config.wsgi
+module = config.wsgi.dev
 home = /home/ubuntu/.pyenv/versions/fc-ec2-deploy
 ;http = :8000
 
