--- a/.config/uwsgi.ini
+++ b/.config/uwsgi.ini
@@ -1,20 +1,10 @@
-;ec2-deploy Django 프로젝트 대한 uwsgi 설정파일
-
 [uwsgi]
-chdir = /srv/ec2-deploy/app
+chdir = /srv/project/app
 module = config.wsgi.production
-home = /home/ubuntu/.pyenv/versions/fc-ec2-deploy
-;http = :8000
 
 socket = /tmp/app.sock
-uid = ubuntu
-gid = ubuntu
-chmod-socket = 666
-chown-socket = ubuntu:ubuntu
 
-;enable-threads = true
 master = true
 vacuum = true
-pidfile = /tmp/mysite.pid
 logto = /tmp/uwsgi.log
 log-reopen = true
